--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ span {
 .about-container .about-box{
     position: relative;
     border-radius: 2rem;
-    box-shadow: 0 0 1rem #1f242d;
+    box-shadow: 0 0 1rem black;
     overflow: hidden;
     display: flex;
 }
@@ -164,12 +164,13 @@ span {
     transform: scale(1.1);
 }
 .about-box .about-layer{
+    color: #68bb59;
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, .1), #6fda50);
+    background: linear-gradient(rgba(0, 0, 0, .8), black);
     display: flex;
     justify-content: center;
     align-items: center;
